Inserções HTML's, Controller's | ERROS: não cadastra chamada(erro na data e no usuario)

--- a/src/main/resources/templates/loginUsuario.html
+++ b/src/main/resources/templates/loginUsuario.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     
-    <form method="post" action="/loginUsuario">
+    <form method="get" action="/loginUsuario">
+
         <label>Usuario</label>
         <input type="text" name="usuario">
         <p></p>
