--- a/src/main/resources/templates/telaInicial.html
+++ b/src/main/resources/templates/telaInicial.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Pagina Principal</h1>
+    <a href="/cadastroUsuario">Cadastro de Usuario</a><p></p>
+    <a href="/listaUsuario">Lista de Usuario</a><p></p>
+    <a href="/cadastroFila">Cadastro de Fila</a><p></p>
+    <a href="/loginUsuario">Login de Usuario</a><p></p>
+    <a href="/cadastroProduto">Cadastro de Produto</a><p></p>
 </body>
 </html>
