--- a/src/main/resources/templates/telaInicial.html
+++ b/src/main/resources/templates/telaInicial.html
@@ -12,5 +12,6 @@
     <a href="/cadastroFila">Cadastro de Fila</a><p></p>
     <a href="/loginUsuario">Login de Usuario</a><p></p>
     <a href="/cadastroProduto">Cadastro de Produto</a><p></p>
+    <a href="/cadastroChamada">Cadastro de Chamada</a><p></p>
 </body>
 </html>
