--- a/src/main/resources/templates/listaUsuario.html
+++ b/src/main/resources/templates/listaUsuario.html
@@ -11,7 +11,7 @@
           <tr>
             <th scope="col">#</th>
             <th scope="col">Nome</th>
-            <th scope="col">Usuário</th>
+            <th scope="col">Login</th>
             <th scope="col">Senha</th>
             <th scope="col">CPF</th>
           </tr>
@@ -20,11 +20,39 @@
             <tr data-th-each="usuarios: ${usuario}" data>
                 <td data-th-text="${usuarios.id}"></td>
                 <td data-th-text="${usuarios.nome}"></td>
-                <td data-th-text="${usuarios.usuario}"></td>
+                <td data-th-text="${usuarios.login}"></td>
                 <td data-th-text="${usuarios.senha}"></td>
                 <td data-th-text="${usuarios.cpf}"></td> 
-                <td><a th:href="@{'/excluir/'+${usuarios.id}}">Excluir</a></td>
-                <td><a th:href="@{'/editar/'+${usuarios.id}}">Editar</a></td>
+                <td><a th:href="@{'/cadastroUsuario/excluir/'+${usuarios.id}}">Excluir</a></td>
+                <td><a th:href="@{'/cadastroUsuario/editar/'+${usuarios.id}}">Editar</a></td>
+            </tr>              
+        </tbody>        
+      </table>
+
+      <p></p>
+      <p></p>
+      
+      <table class="table">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Data</th>
+            <th scope="col">Fila</th>
+            <th scope="col">Produto</th>
+            <th scope="col">Usuario</th>
+            <th scope="col">Descricao</th>
+            <th scope="col">Titulo</th>
+          </tr>
+        </thead>
+        <tbody>
+            <tr data-th-each="chamados: ${chamados}" data>
+                <td data-th-text="${chamados.id}"></td>
+                <td data-th-text="${chamados.data}"></td>
+                <td data-th-text="${chamados.fila}"></td>
+                <td data-th-text="${chamados.produto}"></td>
+                <td data-th-text="${chamados.usuario}"></td>
+                <td data-th-text="${chamados.descricao}"></td>
+                <td data-th-text="${chamados.titulo}"></td>   
             </tr>              
         </tbody>        
       </table>      
