Autenticação de Login do Usuario

--- a/src/main/resources/templates/cadastroChamada.html
+++ b/src/main/resources/templates/cadastroChamada.html
@@ -28,9 +28,9 @@
         </select>
         <p></p>
 
-        <label>Usuario</label>
+        <!--<label>Usuario</label>
         <input type="text" name="user">
-        <p></p>
+        <p></p> !-->
 
         <label>Descrição</label>
         <input type="text" name="descricao">
