--- a/src/main/resources/templates/telaInicial.html
+++ b/src/main/resources/templates/telaInicial.html
@@ -7,6 +7,11 @@
 </head>
 <body>
     <h1>Pagina Principal</h1>
+
+   <!-- <div data-th-each="usuarios:">
+        <p>Bem Vindo <spam></spam></p>
+    </div>-->
+    
     <a href="/cadastroUsuario">Cadastro de Usuario</a><p></p>
     <a href="/listaUsuario">Lista de Usuario</a><p></p>
     <a href="/cadastroFila">Cadastro de Fila</a><p></p>
