Correção ID User no Cadastro de Chamadas

--- a/src/main/resources/templates/cadastroChamada.html
+++ b/src/main/resources/templates/cadastroChamada.html
@@ -7,7 +7,15 @@
 </head>
 <body>
 
+    <span></span>
+
     <form method="post" action="/cadastroChamada">
+
+        <label>Usuario:</label>
+        <input type="text" name="user" th:value="${usuario.nome}" readonly>
+        <input type="hidden" name="userId" th:value="${usuario.id}">
+        <p></p>
+
         <label>Data</label>
         <input type="date" name="data">
         <p></p>
@@ -28,12 +36,12 @@
         </select>
         <p></p>
 
-        <!--<label>Usuario</label>
-        <input type="text" name="user">
-        <p></p> !-->
-
         <label>Descrição</label>
         <input type="text" name="descricao">
+        <p></p>
+
+        <label>Historico</label>
+        <input type="text" name="historico">
         <p></p>
 
         <button type="submit">Enviar</button>
