--- a/src/main/resources/templates/listaUsuario.html
+++ b/src/main/resources/templates/listaUsuario.html
@@ -32,7 +32,7 @@
       <p></p>
       <p></p>
       
-      <table class="table">
+      <!-- <table class="table">
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -50,12 +50,12 @@
                 <td data-th-text="${chamados.data}"></td>
                 <td data-th-text="${chamados.fila.descricao}"></td>
                 <td data-th-text="${chamados.produto.nomeProduto}"></td>
-                <!-- <td data-th-text="${chamados.usuario.nome}"></td> !-->
+                <td data-th-text="${chamados.usuario.nome}"></td>
                 <td data-th-text="${chamados.descricao}"></td>
                 <td data-th-text="${chamados.titulo}"></td>   
             </tr>              
         </tbody>        
-      </table>      
+      </table> !-->     
     
 </body>
 </html>
