--- a/src/main/resources/templates/cadastroChamada.html
+++ b/src/main/resources/templates/cadastroChamada.html
@@ -13,7 +13,7 @@
 
         <label>Usuario:</label>
         <input type="text" name="user" th:value="${usuario.nome}" readonly>
-        <input type="hidden" name="userId" th:value="${usuario.id}">
+        <input type="hidden" name="usuario" th:value="${usuario.id}">
         <p></p>
 
         <label>Data</label>
