--- a/src/main/resources/templates/listaUsuario.html
+++ b/src/main/resources/templates/listaUsuario.html
@@ -14,6 +14,7 @@
             <th scope="col">Login</th>
             <th scope="col">Senha</th>
             <th scope="col">CPF</th>
+            <th scope="col">Tipo</th>
           </tr>
         </thead>
         <tbody>
@@ -22,8 +23,8 @@
                 <td data-th-text="${usuarios.nome}"></td>
                 <td data-th-text="${usuarios.login}"></td>
                 <td data-th-text="${usuarios.senha}"></td>
-                <td data-th-text="${usuarios.cpf}"></td> 
-                <td><a th:href="@{'/cadastroUsuario/excluir/'+${usuarios.id}}">Excluir</a></td>
+                <td data-th-text="${usuarios.cpf}"></td>
+                <td><a th:href="@{'/excluir/'+${usuarios.id}}">Excluir</a></td>
                 <td><a th:href="@{'/cadastroUsuario/editar/'+${usuarios.id}}">Editar</a></td>
             </tr>              
         </tbody>        
@@ -32,7 +33,7 @@
       <p></p>
       <p></p>
       
-      <!-- <table class="table">
+      <table class="table">
         <thead>
           <tr>
             <th scope="col">#</th>
@@ -55,7 +56,7 @@
                 <td data-th-text="${chamados.titulo}"></td>   
             </tr>              
         </tbody>        
-      </table> !-->     
+      </table>    
     
 </body>
 </html>
