--- a/src/main/resources/templates/cadastroUsuario.html
+++ b/src/main/resources/templates/cadastroUsuario.html
@@ -32,7 +32,7 @@
 
         <div th:each="tipo : ${tipos}">
             <label>
-                <input type="radio" th:name="tipo" th:value="${tipo.id}"> <span th:text="${tipo.descricao}"></span>
+                <input type="radio" name="tipo" th:name="tipo" th:value="${tipo.id}"> <span th:text="${tipo.descricao}"></span>
             </label>
         </div>
         
