--- a/src/main/resources/templates/listaUsuario.html
+++ b/src/main/resources/templates/listaUsuario.html
@@ -14,7 +14,7 @@
             <th scope="col">Login</th>
             <th scope="col">Senha</th>
             <th scope="col">CPF</th>
-            <th scope="col">Tipo</th>
+            <th scope="col">Status</th>
           </tr>
         </thead>
         <tbody>
@@ -24,6 +24,7 @@
                 <td data-th-text="${usuarios.login}"></td>
                 <td data-th-text="${usuarios.senha}"></td>
                 <td data-th-text="${usuarios.cpf}"></td>
+                <td data-th-text="${usuarios.Status}"></td>
                 <td><a th:href="@{'/excluir/'+${usuarios.id}}">Excluir</a></td>
                 <td><a th:href="@{'/cadastroUsuario/editar/'+${usuarios.id}}">Editar</a></td>
             </tr>              
