--- a/src/main/resources/templates/telaInicial.html
+++ b/src/main/resources/templates/telaInicial.html
@@ -8,6 +8,10 @@
 <body>
     <h1>Pagina Principal</h1>
 
+    <form action="/logout" method="post" th:action="@{/logout}">
+        <button type="submit">Logout</button>
+    </form>
+
    <!-- <div data-th-each="usuarios:">
         <p>Bem Vindo <spam></spam></p>
     </div>-->
