--- a/src/main/resources/templates/cadastroProduto.html
+++ b/src/main/resources/templates/cadastroProduto.html
@@ -3,6 +3,73 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="..\style.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Pacifico&family=Ysabeau+SC:wght@800&display=swap');
+
+        body {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+            background-color: #464545;
+        }
+        
+        form {
+            width: 415px;
+            padding: 20px;
+            border-radius: 4px;
+            background-color: #302f2f;
+            font-family: 'Ysabeau SC', sans-serif;
+            border-color: #7ae2ff;
+            border-style: solid;
+        }
+        
+        label {
+            display: block;
+            font-weight: bold;
+            margin-bottom: 10px;
+            color:#7ae2ff;
+        }
+        
+        input[type="text"],
+        input[type="password"] {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
+        
+        button[type="submit"] {
+            display: block;
+            width: 100%;
+            padding: 10px;
+            background-color: #7ae2ff;
+            color: #fff;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
+        
+        /* Estilos específicos */
+        #login {
+            font-size: 18px;
+        }
+        
+        #senha {
+            font-size: 16px;
+        }
+        
+        .signup-link {
+            display: block;
+            margin-top: 10px;
+            text-align: center;
+            font-size: 14px;
+        }
+    </style>
     <title>Cadastro de Produto</title>
 </head>
 <body>
